--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -18,10 +18,6 @@
       margin-bottom: 24px;
 
       text-align: center;
-
-      &:last-of-type {
-        margin-bottom: 138px;
-      }
     }
 
     & > .bubbles {
@@ -60,9 +56,25 @@
         }
       }
 
-      & > .bubble-wrap {
-        position: static;
+      & > .about__cell {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         margin-bottom: 24px;
+
+        & > .bubble-wrap {
+          position: static;
+          margin-bottom: 24px;
+        }
+      }
+
+      @media ($m-s) {
+        display: grid;
+        align-items: baseline;
+        grid-template:
+          "cell cell cell"
+          "tags tags tags";
       }
     }
   }
@@ -72,10 +84,17 @@
     width: 100%;
     height: 300px;
 
+    margin-top: 100px;
+
     background-color: $c-orange;
 
     @media ($m-xxxxs) and (orientation: landscape) {
       height: 200px;
+    }
+
+    @media ($m-s) {
+      height: 220px;
+      grid-area: tags;
     }
 
     & > .about__tag {
@@ -84,6 +103,12 @@
       &:nth-child(7) {
         top: 108px;
         left: 39px;
+
+        @media ($m-s) {
+          top: 85px;
+          left: auto;
+          right: 90px;
+        }
       }
 
       &:nth-child(8) {
@@ -95,6 +120,11 @@
           left: auto;
           right: 30px;
         }
+
+        @media ($m-s) {
+          top: 110px;
+          left: 20px;
+        }
       }
 
       & > span {
@@ -102,6 +132,11 @@
         font-size: 24px;
         line-height: 31px;
         color: $c-white;
+
+        @media ($m-s) {
+          font-size: 28px;
+          line-height: 34px;
+        }
       }
     }
 
@@ -114,6 +149,10 @@
 
       &--extended {
         width: 274px;
+
+        @media ($m-s) {
+          width: fit-content;
+        }
       }
 
       &:nth-child(1) {
@@ -178,6 +217,43 @@
           right: 0;
         }
       }
+
+      @media ($m-s) {
+        &:nth-child(1) {
+          top: auto;
+          bottom: 30px;
+          left: 285px;
+        }
+
+        &:nth-child(2) {
+          top: -30px;
+          right: 35px;
+        }
+
+        &:nth-child(3) {
+          top: auto;
+          bottom: 30px;
+          left: auto;
+          right: -30px;
+        }
+
+        &:nth-child(4) {
+          top: 30px;
+          left: -20px;
+        }
+
+        &:nth-child(5) {
+          top: 30px;
+          bottom: auto;
+          left: 330px;
+        }
+
+        &:nth-child(6) {
+          left: 30px;
+          right: auto;
+          bottom: -30px;
+        }
+      }
     }
 
     .bubble {
@@ -190,6 +266,11 @@
         font-size: 16px;
         line-height: 19px;
         color: $c-orange;
+
+        @media ($m-s) {
+          font-size: 18px;
+          line-height: 20px;
+        }
       }
     }
   }
