--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -37,7 +37,9 @@
     }
 
     .integrations__text-wrap {
-      min-width: 720px;
+      @media ($m-s) {
+        min-width: 720px;
+      }
     }
   }
 
@@ -86,7 +88,7 @@
 
     @media ($m-s) {
       .cards__card-bg:nth-of-type(2n) {
-        .cards__toggle {
+        .animated {
           transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.4s;
 
           &::after {
