--- a/src/scss/result.scss
+++ b/src/scss/result.scss
@@ -3,6 +3,8 @@
 
   & > .container {
     position: absolute;
+    left: 0;
+    right: 0;
 
     h2 {
       margin-top: 16px;
@@ -12,6 +14,11 @@
       font-weight: 400;
       font-size: 16px;
       line-height: 22px;
+
+      @media ($m-s) {
+        font-size: 22px;
+        line-height: 28px;
+      }
     }
   }
 
@@ -68,6 +75,36 @@
         left: 24px;
       }
 
+      @media ($m-s) {
+        position: absolute;
+
+        &:nth-child(1) {
+          top: -260px;
+          right: 195px;
+
+
+          & > .bubble > .bubbles--decorative {
+            top: 55px;
+            left: -10px;
+          }
+        }
+
+        &:nth-child(2) {
+          top: 40px;
+          left: 205px;
+
+          & > .bubble > .bubbles--decorative {
+            top: -12px;
+            left: 280px;
+          }
+        }
+
+        &-rectangle img {
+          width: 48px;
+          height: 48px;
+        }
+      }
+
       @media ($m-xxxxs) and (orientation: landscape) {
         position: absolute;
 
@@ -117,20 +154,17 @@
       }
     }
 
-    // @media ($m-xxxxs) and (orientation: landscape) {
-    //   width: 50%;
-    // }
+    @media ($m-s) {
+      grid-template-columns: 60% 40%;
+      .result__pic {
+        & > picture {
+          height: auto;
+        }
 
-    // & > picture > * {
-    //   margin-top: -50px;
-    //   margin-bottom: -90px;
-    // }
-
-    // &:last-of-type {
-    //   & > picture > * {
-    //     margin-top: 20px;
-    //     margin-bottom: 0;
-    //   }
-    // }
+        &:last-of-type {
+          padding-top: 70px;
+        }
+      }
+    }
   }
 }
