--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,9 +1,18 @@
 .intro {
+  position: relative;
+
   padding: 72px 0 160px;
   background: $g-bg;
 
   @media ($m-xxxxs) and (orientation: landscape) {
     padding: 65px 0 40px;
+  }
+
+  @media ($m-mm) {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    padding: 0;
   }
 
   &__text {
@@ -21,6 +30,10 @@
         font-size: 48px;
         line-height: 52px;
       }
+
+      @media ($m-mm) {
+        width: 600px;
+      }
     }
 
     & > h2 {
@@ -36,6 +49,10 @@
         font-size: 24px;
         line-height: 34px;
       }
+
+      @media ($m-mm) {
+        width: 500px;
+      }
     }
 
     @media ($m-xxxxs) and (orientation: landscape) {
@@ -47,11 +64,91 @@
         margin-bottom: 14px;
       }
     }
+
+    @media ($m-mm) {
+      & > h1 {
+        margin-bottom: 40px;
+      }
+
+      & > h2 {
+        margin-bottom: 80px;
+      }
+    }
+  }
+
+  &__scroll {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 60px;
+
+    width: 56px;
+    height: 56px;
+    margin: 0 auto;
+
+    cursor: pointer;
+
+    & > .scroll__chevron {
+      position: relative;
+      width: 28px;
+      height: 16px;
+
+      margin: 0 auto;
+
+      @keyframes blink {
+        50% {
+          transform: translateY(2px);
+          opacity: 0;
+        }
+
+        60% {
+          transform: translateY(-2px);
+        }
+      }
+
+      &::before,
+      &::after {
+        position: absolute;
+        top: 6px;
+
+        height: 4px;
+        width: 18px;
+        background-color: hsla(0, 0%, 50%, 1);
+        border-radius: 4px;
+
+        content: "";
+      }
+
+      &::before {
+        left: 0;
+
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        right: 0;
+
+        transform: rotate(-45deg);
+      }
+
+      &:nth-of-type(1) {
+        margin-top: 12px;
+        animation: blink 2s ease-in infinite;
+      }
+
+      &:nth-of-type(2) {
+        animation: blink 2s ease-in 0.4s infinite;
+      }
+    }
   }
 
   & > .container {
     display: flex;
     flex-direction: column;
+
+    @media ($m-mm) {
+      width: 100%;
+    }
 
     & > .bubbles {
       position: relative;
@@ -59,6 +156,10 @@
       left: auto;
 
       height: 0;
+
+      @media ($m-mm) {
+        top: -206px;
+      }
 
       & > .bubble-wrap {
         &:nth-child(1) {
@@ -149,6 +250,38 @@
           &:nth-child(6) {
             top: 260px;
             right: 0;
+          }
+        }
+
+        @media ($m-mm) {
+          &:nth-child(1) {
+            top: 200px;
+            right: 0;
+          }
+
+          &:nth-child(2) {
+            top: 136px;
+            right: 350px;
+          }
+
+          &:nth-child(3) {
+            top: 460px;
+            right: 60px;
+          }
+
+          &:nth-child(4) {
+            top: 460px;
+            right: 500px;
+          }
+
+          &:nth-child(5) {
+            top: 330px;
+            right: 0px;
+          }
+
+          &:nth-child(6) {
+            top: 330px;
+            right: 100px;
           }
         }
       }
