--- a/src/scss/narrate.scss
+++ b/src/scss/narrate.scss
@@ -4,6 +4,12 @@
   &__text {
     margin-bottom: 55px;
 
+    @media ($m-mm) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     & > p {
       width: 257px;
       margin-bottom: 16px;
@@ -21,6 +27,12 @@
 
         font-size: 23px;
         line-height: 28px;
+      }
+
+      @media ($m-mm) {
+        width: 400px;
+        font-size: 26px;
+        line-height: 32px;
       }
 
       span {
@@ -126,6 +138,14 @@
               display: none;
             }
           }
+        }
+      }
+
+      @media ($m-mm) {
+        width: 500px;
+
+        & .form-inner {
+          padding: 50px;
         }
       }
 
