--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -24,6 +24,9 @@
   & > .container {
     position: relative;
 
+    display: flex;
+    flex-direction: column;
+
     .bubbles {
       position: relative;
       top: 0;
@@ -61,6 +64,7 @@
   }
 
   .cards {
+    align-self: center;
     row-gap: 32px;
 
     @media ($m-s) {
