--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -112,6 +112,10 @@
       grid-area: tags;
     }
 
+    @media ($m-l) {
+      height: 262px;
+    }
+
     & > .about__tag {
       position: absolute;
 
@@ -151,6 +155,11 @@
         @media ($m-s) {
           font-size: 28px;
           line-height: 34px;
+        }
+
+        @media ($m-l) {
+          font-size: 48px;
+          line-height: 62px;
         }
       }
     }
@@ -269,6 +278,16 @@
           bottom: -30px;
         }
       }
+
+      @media ($m-l) {
+        &:nth-child(1) {
+          left: 485px;
+        }
+        
+        &:nth-child(5) {
+          left: 460px;
+        }
+      }
     }
 
     .bubble {
@@ -285,6 +304,11 @@
         @media ($m-s) {
           font-size: 18px;
           line-height: 20px;
+        }
+
+        @media ($m-l) {
+          font-size: 24px;
+          line-height: 34px;
         }
       }
     }
