--- a/src/scss/floors.scss
+++ b/src/scss/floors.scss
@@ -21,6 +21,10 @@
       height: 100vh;
     }
 
+    @media ($m-l) {
+      height: 105vh;
+    }
+
     picture * {
       width: auto;
       height: 100%;
@@ -89,6 +93,25 @@
         43.7% 35.6%,
         21.1% 46.2%
       );
+
+      @media ($m-l) {
+        clip-path: polygon(
+          15.3% 35.6%,
+          31.1% 22.7%,
+          41.2% 29.8%,
+          43.3% 28.5%,
+          52.8% 35.7%,
+          66.9% 46.5%,
+          66.9% 56.5%,
+          59% 51.68%,
+          52.8% 48.2%,
+          52.8% 46.5%,
+          43.3% 40.7%,
+          41.6% 41.4%,
+          31.4% 35.5%,
+          15.2% 46%
+        );
+      }
     }
 
     &--2 {
@@ -108,6 +131,25 @@
         43.7% 50.7%,
         21.1% 58%
       );
+
+      @media ($m-l) {
+        clip-path: polygon(
+          15.1% 45.9%,
+          31.4% 35.5%,
+          41.6% 41.4%,
+          43.3% 40.5%,
+          52.8% 46%,
+          65.8% 53.5%,
+          65.8% 65.7%,
+          59% 62.98%,
+          52.8% 60.4%,
+          52.8% 58.3%,
+          43.3% 54.5%,
+          41.6% 55%,
+          31.4% 50.8%,
+          15.2% 58%
+        );
+      }
     }
 
     &--3 {
@@ -127,6 +169,25 @@
         43.7% 65.6%,
         21.1% 70%
       );
+
+      @media ($m-l) {
+        clip-path: polygon(
+          15.12% 58%,
+          31.4% 50.6%,
+          41.6% 54.8%,
+          43.3% 54.2%,
+          52.8% 58%,
+          65.8% 64.2%,
+          65.8% 73.9%,
+          59% 72.78%,
+          52.8% 71.8%,
+          52.8% 69.9%,
+          43.3% 67.7%,
+          41.6% 68.1%,
+          31.4% 65.6%,
+          15.2% 70%
+        );
+      }
     }
 
     &--4 {
@@ -146,6 +207,25 @@
         43.7% 83.7%,
         21.1% 84.3%
       );
+
+      @media ($m-l) {
+        clip-path: polygon(
+          15.2% 70%,
+          31.4% 65.6%,
+          41.6% 68.1%,
+          43.3% 67.7%,
+          52.8% 69.9%,
+          65.8% 73.5%,
+          65.75% 84.68%,
+          65.7% 84.78%,
+          54.5% 84.5%,
+          52.8% 84.4%,
+          43.3% 83.9%,
+          41.6% 84%,
+          31.4% 83.7%,
+          15.1% 84.3%
+        );
+      }
     }
   }
 
@@ -162,9 +242,9 @@
       padding: 6px;
     }
 
-    & > svg {
-      pointer-events: none;
-    }
+    // & > svg {
+    //   pointer-events: none;
+    // }
 
     &:nth-of-type(1) {
       top: 134px;
@@ -229,6 +309,28 @@
         left: 490px;
       }
     }
+
+    @media ($m-l) {
+      &:nth-of-type(1) {
+        top: 30.5%;
+        left: 37.9%;
+      }
+
+      &:nth-of-type(2) {
+        top: 41.3%;
+        left: 31.6%;
+      }
+
+      &:nth-of-type(3) {
+        top: 57.5%;
+        left: 38.3%;
+      }
+
+      &:nth-of-type(4) {
+        top: 69.8%;
+        left: 31.7%;
+      }
+    }
   }
 
   &__floor-and-space {
@@ -289,12 +391,8 @@
       color: $c-orange;
       border-radius: 4px;
 
-      padding: 5px 11px 6px;
+      padding: 5px 10px;
       background-color: $c-white;
-
-      &:not(:last-child) {
-        margin-right: 12px;
-      }
 
       @media ($m-s) {
         font-size: 16px;
@@ -352,8 +450,8 @@
   &__variants {
     position: relative;
 
-    width: 236px;
-    height: 158px;
+    min-width: 236px;
+    min-height: 158px;
     padding: 12px 22px 20px;
 
     background-color: $c-orange;
@@ -366,7 +464,7 @@
     pointer-events: none;
 
     @media ($m-s) {
-      width: auto;
+      min-width: 275px;
       height: auto;
     }
 
@@ -404,6 +502,10 @@
         left: calc(50% - 160px);
         width: auto;
         height: auto;
+      }
+
+      @media ($m-l) {
+        left: 45%;
       }
 
       &.__js-active {
