--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -65,6 +65,10 @@
       @media ($m-s) {
         width: 360px;
       }
+
+      @media ($m-xl) {
+        width: 550px;
+      }
     }
 
     p {
