--- a/src/scss/bubble.scss
+++ b/src/scss/bubble.scss
@@ -40,6 +40,11 @@
         width: 64px;
         height: 64px;
       }
+
+      @media ($m-xl) {
+        width: 74px;
+        height: 74px;
+      }
     }
   }
 
@@ -55,12 +60,21 @@
       & img {
         width: 60px;
         height: 60px;
+
+        @media ($m-xl) {
+          width: 80px;
+          height: 80px;
+        }
       }
     }
 
     &--small {
       & .bubble {
         padding: 7px;
+
+        @media ($m-xl) {
+          padding: 15px;
+        }
       }
 
       & img {
@@ -70,6 +84,11 @@
         @media ($m-s) {
           width: 40px;
           height: 40px;
+        }
+
+        @media ($m-xl) {
+          width: 56px;
+          height: 56px;
         }
       }
     }
@@ -107,6 +126,10 @@
 
   @media ($m-s) {
     padding: 6px 12px;
+  }
+
+  @media ($m-xl) {
+    padding: 15px 38px;
   }
 
   &s {
@@ -230,6 +253,13 @@
     @media ($m-s) {
       font-size: 18px;
       line-height: 20px;
+    }
+
+    @media ($m-xl) {
+      font-size: 24px;
+      line-height: 34px;
+
+      margin-left: 20px;
     }
   }
 }
