--- a/src/scss/modules.scss
+++ b/src/scss/modules.scss
@@ -15,6 +15,10 @@
         row-gap: 30px;
       }
 
+      @media ($m-xl) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+
       &__card {
         width: 282px;
 
@@ -36,9 +40,17 @@
         .cards__card-bg:nth-of-type(2n) {
           .cards__toggle {
             transition: 0.4s cubic-bezier(0.28, 0, 0.1, 1) 0.4s;
-  
+
             &::after {
               transition: 0.2s cubic-bezier(0.28, 0, 0.1, 1) 0.4s;
+            }
+
+            @media ($m-xl) {
+              transition-delay: 0s;
+
+              &::after {
+                transition-delay: 0s;
+              }
             }
           }
         }
