--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -87,6 +87,10 @@
         width: auto;
         padding-right: 620px;
       }
+
+      @media ($m-xl) {
+        padding-right: 800px;
+      }
     }
   }
 
@@ -129,6 +133,15 @@
       }
     }
 
+    @media ($m-xl) {
+      width: 100%;
+
+      &__card {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
     &__card {
       width: 282px;
       height: 209px;
@@ -137,6 +150,10 @@
 
       &-bg {
         width: fit-content;
+
+        @media ($m-xl) {
+          width: 100%;
+        }
       }
 
       @media ($m-s) {
@@ -144,6 +161,10 @@
         height: 100%;
 
         grid-template-rows: auto auto auto 1fr;
+      }
+
+      @media ($m-xl) {
+        width: 100%;
       }
     }
   }
@@ -162,6 +183,15 @@
       right: 110px;
     }
 
+    @media ($m-xxl) {
+      .bubble {
+        padding: 20px;
+      }
+
+      top: -30px;
+      right: 150px;
+    }
+
     img {
       width: 40px;
       height: 40px;
@@ -169,6 +199,11 @@
       @media ($m-s) {
         width: 60px;
         height: 60px;
+      }
+
+      @media ($m-xxl) {
+        width: 80px;
+        height: 80px;
       }
     }
   }
